--- a/app/html/footer.html
+++ b/app/html/footer.html
@@ -1,3 +1,31 @@
-<footer>
-
+<footer class="footer">
+    <form class="footer__form">
+        <div class="footer__header">
+            <p>Оставьте заявку и мы с Вами свяжемся:) </p>
+        </div>
+        <div class="footer__body">
+            <div class="footer__row">
+                <p>Номер телефона<span class="require">*</span></p>
+                <div class="footer__input">
+                    <input type="text">
+                </div>
+            </div>
+            <div class="footer__row">
+                <p>Имя</p>
+                <div class="footer__input">
+                    <input type="text" placeholder="Имя">
+                    <input type="text" placeholder="Фамилия">
+                </div>
+            </div>
+            <div class="footer__row">
+                <p>вести промо - код</p>
+                <div class="footer__input">
+                    <input type="text">
+                </div>
+            </div>
+            <div class="footer__row">
+                <input type="submit" value="Использовать шанс">
+            </div>
+        </div>
+    </form>
 </footer>
