--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -2,7 +2,9 @@
 
 <!-- @@include ../header.html -->
 
-<!-- @@include ../content.html -->
+<!-- @@include ../prices.html -->
+
+<!-- @@include ../images.html -->
 
 <!-- @@include ../footer.html -->
 
