--- a/app/html/prices.html
+++ b/app/html/prices.html
@@ -1,4 +1,4 @@
-<div class="prices">
+<section class="prices">
     <div class="prices__heading">
         <p>
             <span>Не хватает силы воли? Мотивации? Поддержки?</span>
@@ -51,4 +51,4 @@
     <div class="prices__question">
         <span>ЧТО ТАКОЕ 99 РУБЛЕЙ В ДЕНЬ ?</span>
     </div>
-</div>
+</section>
