--- a/app/html/content.html
+++ b/app/html/content.html
@@ -1,3 +1,5 @@
 <main>
-    my content
+    <!-- @@include four_weeks.html -->
+	<!-- @@include plan.html -->
+	<!-- @@include gym.html -->
 </main>
