--- a/index.html
+++ b/index.html
@@ -18,14 +18,71 @@
 <!-- end html_open.html-->
 
 <!-- start header.html-->
-<header>
-
+<header class="header">
+	<a href="https://t.me/ssdvvbot"><img src="img/button.png" alt="Заглянуть в чат"></a>
 </header>
 <!-- end header.html-->
 
 <!-- start content.html-->
 <main>
-    my content
+<!-- start four_weeks.html-->
+<section class="four-weeks">
+	<h2 class="four-weeks__title">4 недели дома, за которые ты получишь больше результата, чем за несколько месяцев в зале!</h2>
+</section>
+<!-- end four_weeks.html-->
+<!-- start plan.html-->
+<section class="plan">
+	<div class="plan__wrap">
+		<div class="plan__row">
+			<div class="plan__cell">
+				<p><span>4</span> недели</p>
+			</div>
+			<div class="plan__cell">
+				<p><span>5</span> призовых <br> мест</p>
+			</div>
+			<div class="plan__cell">
+				<p><span>300</span> участников в Донецке</p>
+			</div>
+		</div>
+
+		<div class="plan__row">
+			<div class="plan__cell">
+				<p><span>3</span> специалиста</p>
+			</div>
+			<div class="plan__cell">
+				<p><span>90</span> подарков участникам</p>
+			</div>
+			<div class="plan__cell">
+				<p><span>1000</span> лайков в вашем INSTAGRAM</p>
+			</div>
+		</div>
+
+		<div class="plan__row">
+			<div class="plan__cell">
+				<p><span>4</span> групповые <br> тренировки</p>
+			</div>
+			<div class="plan__cell">
+				<p><span>20</span> часов online тренировок</p>
+			</div>
+			<div class="plan__cell">
+				<p><span>1500</span> потерянных килограмм</p>
+			</div>
+		</div>
+	</div>
+	<!-- <img src="../img/stats.png" alt=""> -->
+</section>
+<!-- end plan.html-->
+<!-- start gym.html-->
+<section class="gym">
+	<div class="gym__team">
+		<h2>Опытная команда тренеров</h2>
+		<p>Хочешь похудеть, но не знаешь с чего начать? Участвуй в курсе и начни свое преображение под руководством опытных тренеров!</p>
+	</div>
+	<div class="gym__img">
+		<img src="img/gym.jpg" alt="">
+	</div>
+</section>
+<!-- end gym.html-->
 </main>
 <!-- end content.html-->
 
