--- a/app/html/header.html
+++ b/app/html/header.html
@@ -1,3 +1,3 @@
-<header>
-
+<header class="header">
+	<a href="https://t.me/ssdvvbot"><img src="img/button.png" alt="Заглянуть в чат"></a>
 </header>
