--- a/app/html/content.html
+++ b/app/html/content.html
@@ -2,4 +2,6 @@
     <!-- @@include four_weeks.html -->
 	<!-- @@include plan.html -->
 	<!-- @@include gym.html -->
+    <!-- @@include prices.html -->
+    <!-- @@include images.html -->
 </main>
