--- a/app/html/pages/index.html
+++ b/app/html/pages/index.html
@@ -2,9 +2,7 @@
 
 <!-- @@include ../header.html -->
 
-<!-- @@include ../prices.html -->
-
-<!-- @@include ../images.html -->
+<!-- @@include ../content.html -->
 
 <!-- @@include ../footer.html -->
 
