--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
 	</div>
 </section>
 <!-- end gym.html-->
-</main>
-<!-- end content.html-->
-=======
 <!-- start prices.html-->
-<div class="prices">
+<section class="prices">
     <div class="prices__heading">
         <p>
             <span>Не хватает силы воли? Мотивации? Поддержки?</span>
@@ -137,9 +134,8 @@
     <div class="prices__question">
         <span>ЧТО ТАКОЕ 99 РУБЛЕЙ В ДЕНЬ ?</span>
     </div>
-</div>
+</section>
 <!-- end prices.html-->
-
 <!-- start images.html-->
 <section class="images">
     <img src="img/taxi.jpg" alt="">
@@ -147,6 +143,8 @@
     <img src="img/coffee.jpg" alt="">
 </section>
 <!-- end images.html-->
+</main>
+<!-- end content.html-->
 
 <!-- start footer.html-->
 <footer class="footer">
