--- a/app/html/plan.html
+++ b/app/html/plan.html
@@ -1,4 +1,4 @@
-<section class="plan">
+<section class="plan parallax-window" data-parallax="scroll" data-image-src="img/girl-01.jpg">
 	<div class="plan__wrap">
 		<div class="plan__row">
 			<div class="plan__cell">
