--- a/app/html/prices.html
+++ b/app/html/prices.html
@@ -1,4 +1,4 @@
-<section class="prices">
+<section class="prices parallax-window" data-parallax="scroll" data-image-src="img/girl-05.jpg">
     <div class="prices__heading">
         <p>
             <span>Не хватает силы воли? Мотивации? Поддержки?</span>
