--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- end html_open.html-->
 
 <!-- start header.html-->
-<header class="header">
+<header class="parallax-window header" data-parallax="scroll" data-image-src="img/girl-03.jpg" >
 	<a href="https://t.me/ssdvvbot"><img src="img/button.png" alt="Заглянуть в чат"></a>
 </header>
 <!-- end header.html-->
@@ -28,7 +28,7 @@
 </section>
 <!-- end four_weeks.html-->
 <!-- start plan.html-->
-<section class="plan">
+<section class="plan parallax-window" data-parallax="scroll" data-image-src="img/girl-01.jpg">
 	<div class="plan__wrap">
 		<div class="plan__row">
 			<div class="plan__cell">
@@ -81,7 +81,7 @@
 </section>
 <!-- end gym.html-->
 <!-- start prices.html-->
-<section class="prices">
+<section class="prices parallax-window" data-parallax="scroll" data-image-src="img/girl-05.jpg">
     <div class="prices__heading">
         <p>
             <span>Не хватает силы воли? Мотивации? Поддержки?</span>
@@ -182,6 +182,7 @@
 
 <!-- start html_close.html-->
 <script src='js/jquery-3.2.1.min.js' type="text/javascript"></script>
+<script src='js/parallax.min.js' type="text/javascript"></script>
 <script src="js/script.min.js" type="text/javascript"></script>
 </body>
 </html>
