--- a/app/html/header.html
+++ b/app/html/header.html
@@ -1,3 +1,3 @@
-<header class="header">
+<header class="parallax-window header" data-parallax="scroll" data-image-src="img/girl-03.jpg" >
 	<a href="https://t.me/ssdvvbot"><img src="img/button.png" alt="Заглянуть в чат"></a>
 </header>
